@@ -1,19 +1,18 @@
 
 # Headers file are located here:
 INCLUDE_DIRECTORIES(
+  ${OPENJPEG_SOURCE_DIR}/applications/jpip/libopenjpip
   ${FCGI_INCLUDE_DIRNAME}
-  ../libopenjpip
 )
 
 SET(OPJ_SERVER_SRCS
-${CMAKE_CURRENT_SOURCE_DIR}/channel_manager.c
 ${CMAKE_CURRENT_SOURCE_DIR}/opj_server.c
 ${CMAKE_CURRENT_SOURCE_DIR}/query_parser.c
+${CMAKE_CURRENT_SOURCE_DIR}/channel_manager.c
 ${CMAKE_CURRENT_SOURCE_DIR}/session_manager.c
 )
 
 # Build executable
-
 ADD_DEFINITIONS(-DSERVER)
 ADD_EXECUTABLE(opj_server ${OPJ_SERVER_SRCS})
 TARGET_LINK_LIBRARIES(opj_server openjpip_server ${FCGI_LIBNAME})
@@ -22,6 +21,7 @@ TARGET_LINK_LIBRARIES(opj_server openjpip_server ${FCGI_LIBNAME})
 IF(UNIX)
   TARGET_LINK_LIBRARIES(opj_server m)
 ENDIF(UNIX)
+
 # Install exe
 INSTALL(TARGETS opj_server
   EXPORT OpenJPEGTargets
